--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,7 @@
         android:inputType="textPersonName" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/Bfind_match"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:onClick="onFindClick"
