--- a/app/src/main/res/layout/enter_values.xml
+++ b/app/src/main/res/layout/enter_values.xml
@@ -11,7 +11,7 @@
         android:text="Enter  word" />
 
     <EditText
-        android:id="@+id/Tuserword"
+        android:id="@+id/TFuserWord"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -24,7 +24,7 @@
         android:text="Enter synonym / antonym" />
 
     <EditText
-        android:id="@+id/Tuserpair"
+        android:id="@+id/TFuserWordMatch"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -34,7 +34,7 @@
         android:id="@+id/Bwordsubmit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:onClick="onSubmitCLick"
+        android:onClick="onSubmitClick"
         android:text="Submit" />
 
 </LinearLayout>
