Add antonymlist java methods to save information into database

--- a/app/src/main/res/layout/results_screen.xml
+++ b/app/src/main/res/layout/results_screen.xml
@@ -7,6 +7,13 @@
     <TextView
         android:id="@+id/TVmatchresults"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="43dp"
         android:text="@string/emptyString" />
+
+    <Button
+        android:id="@+id/BHome"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="onHomeClick"
+        android:text="Home" />
 </LinearLayout>
