--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,9 +8,11 @@
     tools:context="com.example.chady.assignment42.MainActivity">
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Find  synonym / antonym"
+        android:text="Find  Antonym"
+        android:textAlignment="textStart"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -34,7 +36,8 @@
         android:id="@+id/Bfind_match"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:elevation="0dp"
         android:onClick="onFindClick"
-        android:text="Find Synonym/ Antonym" />
+        android:text="Find  Antonym" />
 
 </LinearLayout>
