--- a/app/src/main/res/layout/results_screen.xml
+++ b/app/src/main/res/layout/results_screen.xml
@@ -7,8 +7,9 @@
     <TextView
         android:id="@+id/TVmatchresults"
         android:layout_width="match_parent"
-        android:layout_height="43dp"
-        android:text="@string/emptyString" />
+        android:layout_height="104dp"
+        android:text="@string/emptyString"
+        android:textSize="18sp" />
 
     <Button
         android:id="@+id/BHome"
